--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "http-errors": "^2.0.0",
+    "jotai": "^2.10.3",
     "mongoose": "^8.8.3",
     "next": "14.2.13",
     "next-auth": "^4.24.10",
