--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^5.1.1",
     "http-errors": "^2.0.0",
     "jotai": "^2.10.3",
+    "lodash": "^4.17.21",
     "mongoose": "^8.8.3",
     "next": "14.2.13",
     "next-auth": "^4.24.10",
@@ -31,10 +32,12 @@
     "react": "^18",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/http-errors": "^2.0.4",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
