--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.22.3",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "dayjs": "^1.11.13",
     "http-errors": "^2.0.0",
     "jotai": "^2.10.3",
     "lodash": "^4.17.21",
