--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^18",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18",
+    "sharp": "^0.33.5",
     "swr": "^2.2.5",
     "xlsx": "^0.18.5"
   },
