--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,13 @@ NEXTAUTH_URL =
 NEXTAUTH_SECRET = 
 BLOB_READ_WRITE_TOKEN = 
 
+NEXT_PUBLIC_IMAGE_HOSTNAME =
+
 GOOGLE_CLIENT_ID = 
 GOOGLE_CLIENT_SECRET = 
+
+SENTRY_ORG =
+SENTRY_PROJECT =
+SENTRY_AUTH_TOKEN =
+
+NEXT_PUBLIC_GA_TRACKING_ID =
